<resources>
    <string name="app_name">SpeechToTextWatsonV7</string>
<!-- MainActivity -->
    <string name="view_menu">View menu</string>
    <string name="welcome">Welcome</string>
    <string name="start_recording">Start Recording</string>
    <string name="play_recorded_audio">Play Recorded Audio</string>
    <string name="call_speech_to_text_service">Call Speech to Text Service</string>

<!-- Activity Menu -->
    <!-- Header-->
    <string name="menu_text">Menu</string>
    <string name="drinks_text">Drinks</string>

    <!-- Main menu ID's -->
    <string name="etMenu">Menu</string>
    <string name="etDrinks">Drinks</string>
    <string name="etDouble_double">Double Double</string>
    <string name="etCheese_burger">Cheese Burger</string>
    <string name="etHamburger">Hamburger</string>
    <string name="etFrench_fries">French Fries</string>

    <!-- Top Bar, i.e Quantity, Price -->
    <string name="etQuantity">Quantity </string>
    <string name="quantity">Quantity</string>
    <string name="etPrice">Price </string>
    <string name="price">Price</string>

    <!-- Prices ID's -->
    <string name="price_2.95">2.95</string>
    <string name="price_1.95">1.95</string>
    <string name="price_1.65">1.65</string>
    <string name="price_1.19">1.19</string>

    <!-- Main menu Text -->
    <string name="double_double_text">Double Double</string>
    <string name="cheese_burger_text">Cheese Burger</string>
    <string name="hamburger_text">Hamburger</string>
    <string name="french_fries_text">French Fries</string>

    <!-- Menu Prices Text -->
    <string name="_2_95_text">2.95</string>
    <string name="_1_95_text">1.95</string>
    <string name="_1_65_text">1.65</string>
    <string name="_1_19_text">1.19</string>

    <!-- Drinks ID's -->
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="x_large">X-Large</string>

    <!-- Drinks Text-->
    <string name="_small_text">Small</string>
    <string name="_medium_text">Medium</string>
    <string name="_large_text">Large</string>
    <string name="_x_large_text">X-Large</string>

    <!-- Drink Prices ID's -->
    <string name="price_1.15">1.15</string>
    <string name="price_1.25">1.25</string>
    <string name="price_1.45">1.45</string>
    <string name="price_1.65_2">1.45</string>

    <!-- Drinks Prices Text -->
    <string name="_1_15_text">1.15</string>
    <string name="_1_25_text">1.25</string>
    <string name="_1_45_text">1.45</string>
    <string name="_1_65_text_2">1.65</string>

    <!-- Place Order ID -->
    <string name="etPlaceOrder">Place Order</string>
    <!-- Place Order Text -->
    <string name="place_order">Place Order</string>
    <string name="_1XLG">0</string>
    <string name="_1Large">0</string>
    <string name="_1Medium">0</string>
    <string name="_1Small">0</string>
    <string name="_1French">0</string>
    <string name="_1Ham">0</string>
    <string name="_1Double">0</string>
    <string name="_0_text">0</string>
    <string name="_0">0</string>
    <!-- Text View for Total & Total Price -->
    <string name="total">Total</string>
    <string name="pricegoeshere">"$0.00"</string>

    <!-- Total Price place holder, not sure if I need this -->
    <string name="totalPricePlaceholder">""</string>
    <string name="etreceipt">Receipt</string>
    <string name="confirmation">Confirmation</string>
    <string name="itemplaceholder">Item Placeholder</string>

    <!-- Confirmation -->
    <string name="etTotalConfirmation">Total</string>
    <string name="totalConfirmation">Total</string>
    <string name="etPlaceHolderConfirmation">Place Holder </string>
    <string name="placeholder_order_items">""</string>
    <string name="confirmButton">Confirm</string>
    <string name="etConfirmButton">Confirm</string>
    <string name="etticketID">Confirm</string>
    <string name="ticket_id">Ticket ID #</string>
    <string name="firstname">""</string>
    <string name="speakorder">Speak Order</string>
    <string name="etspeakorder">Speak Order</string>
    <string name="loadingCircle"></string>
    <string name="press_button_conversation"></string>
</resources>
