<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="75"/>
        <TextView
            android:id="@+id/etConfirmation"
            android:text="@string/confirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textSize="36sp"
            android:textAlignment="viewStart"
            android:textStyle="normal|bold"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/etQuantity"
                    android:text="@string/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal|bold"
                    android:textSize="14sp"
                    android:layout_marginLeft="200dp" />

                <TextView
                    android:id="@+id/etPrice"
                    android:text="@string/etPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal|bold"
                    android:layout_marginLeft="80dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText"
                    android:hint="First Name" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:text="Ticket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7" />

                <TextView
                    android:id="@+id/etticketID"
                    android:hint="@string/ticket_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:text="Customers Order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                android:id="@+id/etPlaceHolderConfirmation"
                android:text="@string/placeholder_order_items"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="260dp"
                    android:hint="Customer's Order" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>

        <TextView
            android:id="@+id/etTotalConfirmation"
            android:text="@string/totalConfirmation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="36sp"
            android:fontFamily="serif"
            android:textStyle="normal|bold"
            android:layout_weight="0.39"
            android:height="350dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:gravity="bottom" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <Button
                    android:id="@+id/etConfirmButton"
                    android:text="@string/confirmButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom|center_vertical|center_horizontal" />
        </TableLayout>
    </LinearLayout>
</ScrollView>
